Fix section break
Because of the broken layout of the page (a set of floating elements) the `govuk-section-break` `<hr>` elements are not showing up without clearing the floating element that precede them.

--- a/app/assets/stylesheets/views/_get-involved.scss
+++ b/app/assets/stylesheets/views/_get-involved.scss
@@ -8,6 +8,10 @@
     line-height: 1.16;
   }
 
+  .govuk-section-break {
+    clear: both;
+  }
+
   #engage-with-government,
   #take-part {
     clear: both;
